# gmpc-dynamic-playlist

./: .hgignore  .hgtags  CMakeLists.txt  blacklist.c  blacklist.h  database.c  database.h  dbSong.c  dbSong.h  dynlist-ui-options.xml  fmSong.c  fmSong.h  icon.c  icon.h  played.c  played.h  plugin.c  plugin.h  search.h
cmake/: FindGettext.cmake  FindTesting.cmake  Testing.cmake  Tools.cmake
po/: bg.po  ca.po  cs.po  de.po  en_CA.po  en_GB.po  es.po  et.po  fr.po  gl.po  hu.po  it.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  tr.po
src/: blacklist.c  blacklist.h  database.c  database.h  dbSong.c  dbSong.h  defaults.h  dynlist-ui-options.xml  fuzzy.c  fuzzy.h  icon.c  icon.h  played.c  played.h  plugin.c  plugin.h  prefs.c  prefs.h  prune.c  prune.h  search.c  search.h
tests/: CMakeLists.txt  fixture_gmpc.c  fixture_gmpc.h  fixture_mpd.c  fixture_mpd.h  gtester.xsl  test_blacklist.c  test_database.c  test_dbSong.c  test_fixture.c  test_icon.c  test_played.c  test_prefs.c  test_prune.c
tests/blacklist/empty/: config.in  database
tests/database/blacklist/: database
tests/database/blacklist/all/: config.in
tests/database/blacklist/all/playlists/: !Blacklist Album.m3u  !Blacklist Artist.m3u  !Blacklist Genre.m3u  !Blacklist Song.m3u
tests/played/: config.in  database
